leptos_macro/tests/view/44_wrong_type_and_missing_prop.stderr
error[E0277]: missing required prop `concrete_i32` on component `Inner`
  --> tests/view/44_wrong_type_and_missing_prop.rs:13:14
   |
13 |             <Inner generic_fun=true>
   |              ^^^^^ missing prop `concrete_i32`
   |
help: the trait `required_Inner_concrete_i32` is not implemented for `Inner::Absent`
  --> tests/view/44_wrong_type_and_missing_prop.rs:20:1
   |
20 | #[component]
   | ^^^^^^^^^^^^
   = note: required props: [`concrete_i32`, `generic_fun`, `children`]
note: required by a bound in `Inner::PresenceBuilder::<(__F0, __F1, __F2)>::require_props`
  --> tests/view/44_wrong_type_and_missing_prop.rs:20:1
   |
20 | #[component]
   | ^^^^^^^^^^^^ required by this bound in `PresenceBuilder::<(__F0, __F1, __F2)>::require_props`
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `bool` is not a valid type for prop `generic_fun` on component `Inner`
  --> tests/view/44_wrong_type_and_missing_prop.rs:13:32
   |
13 |             <Inner generic_fun=true>
   |                                ^^^^ the trait `Fn()` is not implemented for `bool`
   |
   = note: required: `Fn() -> bool` — a closure or function reference
note: required for `bool` to implement `Check_generic_fun`
  --> tests/view/44_wrong_type_and_missing_prop.rs:20:1
   |
20 | #[component]
   | ^^^^^^^^^^^^
note: required by a bound in `Inner::Helper::<F>::check_and_wrap_generic_fun`
  --> tests/view/44_wrong_type_and_missing_prop.rs:20:1
   |
20 | #[component]
   | ^^^^^^^^^^^^ required by this bound in `Helper::<F>::check_and_wrap_generic_fun`
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `extract_value` exists for struct `Wrap_generic_fun<bool>`, but its trait bounds were not satisfied
  --> tests/view/44_wrong_type_and_missing_prop.rs:13:32
   |
13 |             <Inner generic_fun=true>
   |                                ^^^^ method cannot be called on `Wrap_generic_fun<bool>` due to unsatisfied trait bounds
...
20 | #[component]
   | ------------ method `extract_value` not found for this struct
   |
note: the following trait bounds were not satisfied:
      `bool: Fn<()>`
      `bool: FnOnce<()>`
  --> tests/view/44_wrong_type_and_missing_prop.rs:20:1
   |
20 | #[component]
   | ^^^^^^^^^^^^
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `check_missing` exists for struct `Inner::PresenceBuilder<(Inner::Absent, Inner::Present, Inner::Present)>`, but its trait bounds were not satisfied
  --> tests/view/44_wrong_type_and_missing_prop.rs:13:14
   |
13 |             <Inner generic_fun=true>
   |              ^^^^^ method cannot be called due to unsatisfied trait bounds
...
20 | #[component]
   | ------------ method `check_missing` not found for this struct because it doesn't satisfy `Inner::Absent: required_Inner_concrete_i32`
   |
note: trait bound `Inner::Absent: required_Inner_concrete_i32` was not satisfied
  --> tests/view/44_wrong_type_and_missing_prop.rs:20:1
   |
20 | #[component]
   | ^^^^^^^^^^^^
note: the trait `required_Inner_concrete_i32` must be implemented
  --> tests/view/44_wrong_type_and_missing_prop.rs:20:1
   |
20 | #[component]
   | ^^^^^^^^^^^^
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)
